# rust-aircraft-fault-detection

./: Cargo.toml  README.md
data/: fault_log.csv  sample_sensor_data.csv
src/: logger.rs  main.rs  models.rs  parser.rs  reports.rs  ui.rs
