[package]
name = "rust-aircraft-fault-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
# Used to generate timestamps for scans and log entries.
chrono = "0.4"

# Used to read and write CSV files.
csv = "1.3"

# Used to deserialize CSV rows into Rust structs.
serde = { version = "1.0", features = ["derive"] }

# Used to add color to terminal output for a clearer demo.
colored = "3.1.1"